<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".IndiceActivity">

    <TextView
        android:id="@+id/textViewVacio1"
        android:layout_width="match_parent"
        android:layout_height="37dp"
        android:layout_weight="1"
        android:text="@string/textView_vacio"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/textViewApartados"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:textAlignment="center"
        android:text="@string/apartados" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/radioButton1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/radioButton_1" />

        <RadioButton
            android:id="@+id/radioButton2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/radioButton_2" />

        <RadioButton
            android:id="@+id/radioButton3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/radioButton_3" />

        <RadioButton
            android:id="@+id/radioButton4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/radioButton_4" />

        <RadioButton
            android:id="@+id/radioButton5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/radioButton_5" />

        <RadioButton
            android:id="@+id/radioButton6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/radioButton_6" />

        <RadioButton
            android:id="@+id/radioButton7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/radioButton_7" />

        <RadioButton
            android:id="@+id/radioButton8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/radioButton_8" />

        <RadioButton
            android:id="@+id/radioButton9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/radioButton_9" />

    </RadioGroup>

    <TextView
        android:id="@+id/textViewVacio2"
        android:layout_width="match_parent"
        android:layout_height="37dp"
        android:layout_weight="1"
        android:text="@string/textView_vacio"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/textViewInstruccion"
        android:layout_width="match_parent"
        android:layout_height="37dp"
        android:layout_weight="1"
        android:text="@string/textView_instruccion"
        android:textAlignment="center" />

    <Button
        android:id="@+id/buttonElegir"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_siguiente"
        android:textAppearance="@style/TextAppearance.AppCompat" />

</LinearLayout>